--- a/Link.html
+++ b/Link.html
@@ -20,14 +20,14 @@
     </header>
 
     <nav>
-        <a class="menua" href="index.html">HTML</a>
-        <a class="menua" href="pag2.html">CSS</a>
+        <a class="menua" href="index.html" rel="prev">HTML</a>
+        <a class="menua" href="pag2.html" rel="prev">CSS</a>
     </nav>
 
     <main>
         <H2>Geral</H2>
 
-        <a class="menua" href="Onde esta localizado o arquivo">Âncora</a>
+        <a class="menua" href="Onde esta localizado o arquivo" rel="prev|next|external">Âncora</a>
         
         <a class="menua" href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="external">download</a>
 
@@ -35,15 +35,15 @@
 
         <a class="menua" href="des12/index.html" rel="next">Cordel</a>
 
-        <a class="menua" href="pacote-d013/index.html">Social</a>
+        <a class="menua" href="pacote-d013/index.html" rel="next">Social</a>
 
         <h2>Ex Estudo</h2>
 
         <a class="menua" href="ex022/index.html" rel="next">Cap19</a>
 
-        <a class="menua" href="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).zip" download="Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="application/zip">Deidara</a>
+        <a class="menua" href="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).zip" download="Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="application/zip" rel="download">Deidara</a>
 
-        <a class="menua" href="links/formularios.html">Formulario</a>
+        <a class="menua" href="links/formularios.html" rel="next">Formulario</a>
 
     </main>
 </body>
