--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 
                 <a class="menua" href="pag2.html" rel="next">Css</a>
 
-                <a class="menua" href="Link.html">Links</a>
+                <a class="menua" href="Link.html" rel="next">Links</a>
 
 
             </div>
