--- a/links/formularios.html
+++ b/links/formularios.html
@@ -17,6 +17,9 @@
             margin-bottom: 5px;
             
         }
+        main {
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
@@ -28,9 +31,9 @@
     <nav>
         <a class="menua" href="../index.html" rel="prev">Html</a>
 
-        <a class="menua" href="../pag2.html">CSS</a>
+        <a class="menua" href="../pag2.html" rel="prev">CSS</a>
 
-        <a class="menua" href="../Link.html">Links</a>
+        <a class="menua" href="../Link.html" rel="prev">Links</a>
     </nav>
 
     <main>
@@ -38,6 +41,17 @@
         <ul>
             <li>
                 action | onde vai ser mandado os dados
+            </li>
+            <li>
+                method | o metodo 
+                <ul>
+                    <li>
+                        GET | padrão | ate 3mil letras
+                    </li>
+                    <li>
+                        POST | Não aparece na url os dados, mas aparece em inspecionar | Network-cadastro-Headers
+                    </li>
+                </ul>
             </li>
             <li>
                 autocomplete 
