--- a/pag2.html
+++ b/pag2.html
@@ -58,7 +58,7 @@
                     <section class="menum">
                         <a class="menua" href="index.html" rel="prev">Html</a>
 
-                        <a class="menua" href="Link.html">Links</a>
+                        <a class="menua" href="Link.html" rel="next">Links</a>
 
                     </section>
                 
