--- a/pacote-d013/index.html
+++ b/pacote-d013/index.html
@@ -14,6 +14,11 @@
             <iframe src="home.html" name="tela" id="tela" frameborder="0">
                 Seu navegador n é compativel
             </iframe>
+            <section id="HC">
+                <a href="#"><img src="imagens/botaoH.png" alt="botao-html"></a>
+    
+                <a href="#"><img src="imagens/botaoC.png" alt=""></a>
+            </section>
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
@@ -23,6 +28,7 @@
             <a href="Twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
             <a href="Facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
+        
     </main>
 </body>
 </html>
