--- a/pag2.html
+++ b/pag2.html
@@ -513,7 +513,16 @@
             <p>
                 <ul>
                     <li>
-                        auto
+                        auto - Semelhante a , mas adiciona barras de rolagem somente quando necessárioscroll
+                    </li>
+                    <li>
+                        scroll - O estouro é recortado e uma barra de rolagem é adicionada para ver o resto do conteúdo
+                    </li>
+                    <li>
+                        hidden - O estouro é recortado, e o resto do conteúdo será invisível
+                    </li>
+                    <li>
+                        visible -Inadimplência. O estouro não é cortado. O conteúdo é renderizado fora da caixa do elemento
                     </li>
                 </ul>
             </p>
