--- a/links/formularios.html
+++ b/links/formularios.html
@@ -166,6 +166,35 @@
                 <input type="reset" value="Limpar">
             </p>
         </form>
+        
+        <h2>
+            Formulário 3 Números
+        </h2>
+
+        <form action="cadastro.php" method="get" autocomplete="on">
+        
+            <p>
+                <label for="imedia">Média</label>
+                <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5"><!--min é o minimo dos numeros| max o maximo dos numeros-->
+                <!-- value tira o placeholder(caracteristica q fica dentro da caixa como dica) -->
+            </p>
+            <p>
+                <label for="imes">Período letivo</label>
+                <input type="month" name="mes" id="imes">
+            </p>
+            <p>
+                <label for="idia">dia da prova</label>
+                <input type="date" name="dia" id="idia">
+            </p>
+            <p>
+                <label for="ihora">hora da prova</label>
+                <input type="time" name="hora" id="ihora">
+            </p>
+            <p>
+                <input type="submit" value="Enviar">
+                <input type="reset" value="Limpar">
+            </p>
+        </form>
     </main>
 </body>
 </html>
