correção botoes link
donwload e formularios botoes foram corrigidos

--- a/links/formularios.html
+++ b/links/formularios.html
@@ -168,7 +168,7 @@
         </form>
         
         <h2>
-            Formulário 3 Números
+            &#127766 Formulário 3 Números
         </h2>
 
         <form action="cadastro.php" method="get" autocomplete="on">
