--- a/links/formularios.html
+++ b/links/formularios.html
@@ -196,7 +196,7 @@
             </p>
         
             
-        <h2>Formulário 4 Email e Celular</h2>
+        <h2>Formulário 4 Email e tel</h2>
 
             <form action="cadastro.php" method="get" autocomplete="on">
                 <fieldset>
@@ -214,7 +214,7 @@
             </form>
 
         <h2>
-            Formulário 5 Esportes e Radios
+            Formulário 5 Checkbox e Radios
         </h2>
             <form action="cadastro.php" method="get" autocomplete="on">
                 <fieldset>
