so corrigindo o titulo

--- a/Link.html
+++ b/Link.html
@@ -43,7 +43,7 @@
 
         <a class="menua" href="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).zip" download="Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="application/zip" rel="download">Deidara</a>
 
-        <a class="menua" href="links/formularios.html" rel="next">Formulario</a>
+        <a class="menua" href="links/formularios.html" rel="next">Formulário</a>
 
     </main>
 </body>
