--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="menua" href="Link.html" rel="next">Links</a>
 
 
-            </div>
+            </section>
                 
             
         </div>
