media feature inicio
lançamento das orientação, e criação/restauração de novos css.

--- a/links/mediaq.html
+++ b/links/mediaq.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css" media="screen">
     <link rel="stylesheet" href="../css/cssquery/mq1.css" media="print">
+
+    <link rel="stylesheet" href="../css/cssfeature/style.css" media="screen and (orientation: landscape)">
+
+    <link rel="stylesheet" href="../css/cssfeature/stlope.css" media="screen and (orientation: portrait)">
+    
+    <link rel="stylesheet" href="../css/cssfeature/pratodo.css" media="all">
     <title>Document</title>
 </head>
 <body>
@@ -52,6 +57,18 @@
             <p>Esse aparece para imprimir media = print</p>
             <p>Ambos colocados no link:css cada um.</p>
             </aside>
+        </article>
+
+        <article>
+
+            <aside>
+
+                <h2>MQ 2</h2>
+                <P>Orientação do dispositivo.</P>
+
+
+            </aside>
+
         </article>
 
     </main>
