--- a/links/mediaq.html
+++ b/links/mediaq.html
@@ -71,6 +71,44 @@
 
         </article>
 
+        <article>
+
+            <aside>
+
+                <h2>
+                    MQ 3
+                </h2>
+
+                <p>
+                    colocar @media screen dentro do mesmo Css.
+                </p>
+
+                <code>
+
+                    @media all {
+                        *{
+                            margin:0px;
+                        }
+                    }
+<br>
+                    @media screen and (orientation: portrait){
+                        body {
+                            background:
+                        }
+                    }
+<br>
+                    @media screen and (orientation: landscape){
+                        body {
+                            background:
+                        }
+                    }
+
+                </code>
+
+            </aside>
+
+        </article>
+
     </main>
 
 </body>
