--- a/Link.html
+++ b/Link.html
@@ -45,7 +45,7 @@
 
         <a class="menua" href="links/formularios.html" rel="next">Formulário</a>
 
-        <a class="menua" href="links/mediaq.html">Media Q</a>
+        <a class="menua" href="links/mediaquery/mediaquery.html">Media Q</a>
 
     </main>
 </body>
