inicio tela login
criação da tela de login primeira e segunda aula cap 26.

--- a/Link.html
+++ b/Link.html
@@ -37,6 +37,8 @@
 
         <a class="menua" href="pacote-d013/index.html" rel="next">Social</a>
 
+        <a class="menua" href="links/login/lg.html">Tela Login</a>
+
         <h2>Ex Estudo</h2>
 
         <a class="menua" href="ex022/index.html" rel="next">Cap19</a>
@@ -46,6 +48,8 @@
         <a class="menua" href="links/formularios.html" rel="next">Formulário</a>
 
         <a class="menua" href="links/mediaquery/mediaquery.html">Media Q</a>
+
+        
 
     </main>
 </body>
