--- a/links/login/lg.html
+++ b/links/login/lg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-querie.css">
     <title>Document</title>
@@ -27,17 +28,25 @@
                 </p>
 
                 <form action="login.php" method="post" autocomplete="on">
-                    <p>
-                        <label for="iemail">E-mail:</label>
-                        <input type="email" name="email" id="iemail" required autocomplete="email" placeholder="E-mail do usuario">
-                    </p>
-                    <p>
-                        <label for="isen">Senha:</label>
-                        <input type="password" name="sen" id="isen" required placeholder="senha do usuario">
-                    </p>
+                    <div class="campo">  
+                        <span class="material-symbols-outlined"  >
+                            person
+                        </span>
+
+                        <input type="email" name="login" id="ilogin" required autocomplete="email" placeholder="--E-mail do usuario--">
+                        <label for="ilogin">Email</label>
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined" >
+                            vpn_key
+                        </span>
+
+                        <input type="password" name="senha" id="isenha" required placeholder="--senha do usuario--" autocomplete="current-password">
+                        <label for="isenha">Senha</label>
+                    </div>
                     <p>
                         <input type="submit" value="Enviar">
-                        <input type="reset" value="Limpar">
+                        <input type="reset" value="Esqueci a senha">
                     </p>
                 </form>
 
