black no fundo mas com background

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             </aside>
 
             <!-- Tamanho padrão 300x150 -->
+        
             <iframe name="amostra" src="video/RL.mp4" width="100%" height="300px" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" referrerpolicy="no-referrer"></iframe>
         </aside>
 
@@ -345,7 +346,7 @@
                 </p>
                 <br>
                 <p>
-                    link para fazer <a href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="external">download</a>
+                    link para fazer <a href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="noopener">download</a>
                     <p class="pre">&lt;a href="local do arquivo" download="o nome do arquivo" type="comando para o tipo do arquivo"&gt;nome do arquivo&lt;/a&gt;</p>
                 </p>
                 <br>
