--- a/Link.html
+++ b/Link.html
@@ -25,11 +25,18 @@
     </nav>
 
     <main>
+        <h2>Principais</h2>
+        <a class="menua" href="index.html" rel="prev">HTML</a>
+        
+        <a class="menua" href="pag2.html" rel="prev">CSS</a>
+
+        <a class="menua" href="Javascript/javascript.html">Javascript</a>
+
         <H2>Geral</H2>
 
         <a class="menua" href="Onde esta localizado o arquivo" rel="prev|next|external">Âncora</a>
         
-        <a class="menua" href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="external">download</a>
+        <a class="menua" href="https://www.iana.org/assignments/media-types/media-types.xhtml" target="_blank" rel="noopener">download</a>
 
         <h2>Projetos</h2>
 
