--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
                 <a class="menua" href="Link.html" rel="next">Links</a>
 
+                <a href="chat.html" class="menua" rel="next">chat</a>
+
 
             </section>
                 
