Drescribe nome da tabela

--- a/links/MySQL/MySQL.html
+++ b/links/MySQL/MySQL.html
@@ -35,7 +35,7 @@
 
             <p>Exemplo: <br>
                 <pre>
-                    
+
 CREATE DATABASE cadastros;
 CREATE TABLE pessoas (
     nome varchar(30),
@@ -45,7 +45,15 @@ CREATE TABLE pessoas (
     altura float,
     nacionalidade varchar(20)
 );
+
                 </pre>
+            </p>
+
+            <p>
+                <code>
+                    DESCRIBE "nome da tabela"; --descreve a tabela 
+                </code> <br>
+                <img src="imagens/Describe pessoas.png" alt="Descição da tabela">
             </p>
 
             <img width="500px" height="300px" src="imagens/Tipos Primitivos MySQL.png" alt="Tipos Primitivos MySQL">
