Desafios aula 08 de Python

--- a/links/Animação/Animacao.html
+++ b/links/Animação/Animacao.html
@@ -7,21 +7,28 @@
     <title>Animações</title>
 </head>
 <body>
+
     <header>
 
     </header>
+
     <main>
+
         <div class="circulo"></div>
-        <section>
-            <input type="email" name="" id="">
-            <input type="email" name="" id=""> <br>
-            <input type="button" value="">
-        </section>
+
         <div class="pontilhado"></div>
-        
+
+        <section>
+            <input type="email" name="" id=""> <br>
+            <input type="email" name="" id=""> <br>
+            <input class="botao" type="button" value="">
+        </section>
+
     </main>
+
     <footer>
 
     </footer>
+
 </body>
 </html>
