Add (Flexbox) (Java) (DGames)
Adicionei flexbox estudos, java estudos, e o D.

--- a/Link.html
+++ b/Link.html
@@ -31,6 +31,7 @@
             <a class="menua" href="index.html" rel="prev">HTML</a>
             <a class="menua" href="pag2.html" rel="prev">CSS</a>
             <a class="menua" href="Javascript/javascript.html">Javascript</a>
+            <a class="menua" href="links/Java/estudos/Estudos.java">Java</a>
 
             <H2>Geral</H2>
             <a class="menua" href="Onde esta localizado o arquivo" rel="prev|next|external">Âncora</a>
@@ -38,12 +39,15 @@
 
             <h2>Projetos</h2>
             <a class="menua" href="des12/index.html" rel="next">Cordel</a>
+            <a class="menua" href="links/Flexbox/Projeto/FlexBoxProj.html">Flexbox</a>
+            <a class="menua" href="links/Flexbox/Projeto/FlexProj.html">FlexProj</a>
             <a class="menua" href="pacote-d013/index.html" rel="next">Social</a>
             <a class="menua" href="links/login/lg.html">Tela Login</a>
 
             <h2>Ex Estudo</h2>
             <a class="menua" href="ex022/index.html" rel="next">Cap19</a>
             <a class="menua" href="audio/Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).zip" download="Rap do Deidara (Naruto) - A ARTE É A EXPLOSÃO _ NERD HITS (320 kbps).mp3" type="application/zip" rel="download">Deidara</a>
+            <a class="menua" href="links/Flexbox/Teoia/Flexbox.html">Flexbox</a>
             <a class="menua" href="links/formularios.html" rel="next">Formulário</a>
             <a class="menua" href="links/mediaquery/mediaquery.html">Media Q</a>
             <a class="menua" href="links/MySQL/MySQL.html" rel="next">MySQL</a>
