--- a/links/Home/index.html
+++ b/links/Home/index.html
@@ -22,11 +22,11 @@
 
         <nav>
 
-            <a href="../formularios.html">Home</a>
-            <a href="../formularios.html">HTML</a>
-            <a href="../formularios.html">CSS</a>
-            <a href="../formularios.html">Outros</a>
-            <a href="../formularios.html">Projetos</a>
+            <a href="../Home/index.html">Home</a>
+            <a href="../../index.html">HTML</a>
+            <a href="../../pag2.html">CSS</a>
+            <a href="../../Link.html">Outros</a>
+            <a href="../../links/formularios.html">Projetos</a>
 
         </nav>
 
