--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     target="amostra">
                     Waze
                     </a>
-                    <a href="https://docs.google.com/presentation/d/e/2PACX-1vRQQqt8cfiy8P6BmQFerJxThsOouqkYexDLu_zrJPebSeqq2z7-xjFvyRXZpPhs486nLPt2X03nfZmY/embed?start=false&loop=false&delayms=3000"
+                    <a href="https://docs.google.com/presentation/d/e/2PACX-1vRQQqt8cfiy8P6BmQFerJxThsOouqkYexDLu_zrJPebSeqq2z7-xjFvyRXZpPhs486nLPt2X03nfZmY/embed?start=false&loop=false&delayms=3000" 
                     target="amostra">
                     Reunião
                     </a>
@@ -102,7 +102,7 @@
                     </article>
     
                     <article id="myfoto">
-                        <a target="_blank" href="https://github.com/LucasLiberio">...</a>
+                        <a rel="noopener" target="_blank" href="https://github.com/LucasLiberio">...</a>
                     </article>
                 </section>
     
